Deixando o visual mais bonito e código melhor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,14 @@
     <string name="et_hint_noticia">Escreva aqui a notícia</string>
     <string name="et_hint_autor">Autor</string>
     <string name="campo_vazio">Preencha todos os campos para publicar sua notícia</string>
-    <string name="publicado">Sua notícia foi publicada!</string>
+    <string name="publicado">Sua notícia foi publicada com sucesso!</string>
     <string name="título_curto">Nome do título curto</string>
     <string name="notícia_curta">Corpo da notícia curta.</string>
     <string name="data">20/02/1982</string>
     <string name="erro">ERRO</string>
     <string name="bd_erro"><![CDATA[Erro <unknown> ao salvar dados]]></string>
+    <string name="dados">Campos</string>
+    <string name="sucesso">Notícia</string>
+    <string name="salvar">Salvando</string>
 
 </resources>
