Deixando o visual mais bonito e código melhor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="dados">Campos</string>
     <string name="sucesso">Notícia</string>
     <string name="salvar">Salvando</string>
+    <string name="alerta">ALERTA</string>
 
 </resources>
